[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/ui/GameMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/ui/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/font.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Imgs/arrow_button.png" type="Texture" id=4]
[ext_resource path="res://Imgs/arrow_button_frame.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]

size = 18
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="GameMenu" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Continue" parent="." index="0" instance=ExtResource( 2 )]

position = Vector2( 465, 144 )
_sections_unfolded = [ "Transform" ]
text = "Continue"

[node name="PlayerType" type="Label" parent="." index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 101.0
margin_top = 272.0
margin_right = 357.0
margin_bottom = 336.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Type"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="ColorRect" type="ColorRect" parent="PlayerType" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 256.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 0.160196 )
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="PlayerColor" type="Label" parent="." index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 101.0
margin_top = 368.0
margin_right = 357.0
margin_bottom = 432.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Color"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="ColorRect" type="ColorRect" parent="PlayerColor" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 256.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 0.160196 )
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="ChangeType" type="Area2D" parent="." index="3"]

editor/display_folded = true
position = Vector2( 84, 304 )
scale = Vector2( 1, 2 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="ChangeType" index="0"]

texture = ExtResource( 4 )

[node name="SpriteSelected" type="Sprite" parent="ChangeType" index="1"]

visible = false
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChangeType" index="2"]

scale = Vector2( 1.6, 1.6 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="ChangeColor" type="Area2D" parent="." index="4"]

editor/display_folded = true
position = Vector2( 84, 400 )
scale = Vector2( 1, 2 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="ChangeColor" index="0"]

texture = ExtResource( 4 )

[node name="SpriteSelected" type="Sprite" parent="ChangeColor" index="1"]

visible = false
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChangeColor" index="2"]

scale = Vector2( 1.6, 1.6 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Timer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = false

[node name="Panel" type="Panel" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1.0
margin_right = 310.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
__meta__ = {
"_edit_group_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="Panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 17.0
margin_top = 18.0
margin_right = 297.0
margin_bottom = 99.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = true
bbcode_text = "Move - r_click, actions - l_click, 
change action_mode - TAB(or click in hud), 
open build menu - R, scroll recipes - A,D,
create recipe - SPACE"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Move - r_click, actions - l_click, 
change action_mode - TAB(or click in hud), 
open build menu - R, scroll recipes - A,D,
create recipe - SPACE"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode" ]

[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]

[connection signal="input_event" from="ChangeType" to="." method="_on_ChangeType_input_event"]

[connection signal="mouse_entered" from="ChangeType" to="." method="_on_ChangeType_mouse_entered"]

[connection signal="mouse_exited" from="ChangeType" to="." method="_on_ChangeType_mouse_exited"]

[connection signal="input_event" from="ChangeColor" to="." method="_on_ChangeColor_input_event"]

[connection signal="mouse_entered" from="ChangeColor" to="." method="_on_ChangeColor_mouse_entered"]

[connection signal="mouse_exited" from="ChangeColor" to="." method="_on_ChangeColor_mouse_exited"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


